--- a/style.css
+++ b/style.css
@@ -397,9 +397,11 @@ transform: scaleX(0.85) skewY(20deg);
 
 /* ------------------------------- */
 .text-fond{
-     position: absolute;
+     position: relative;
      top: -0.5em;
-     right: 20px;
+     /* left: 30%; */
+     margin: 0 auto ;
+     margin-bottom: -230px;
      z-index: -1;
      color: var(--shadow-lighta);
      font-size: 20em;
@@ -432,10 +434,6 @@ svg{
 .relative{
      position: relative;
 }
-.skills{
-     /* background-color: var(--shadow-light); */
-     
-}
 .skills ul{
      margin-top: -3em;
 }
@@ -444,7 +442,6 @@ svg{
      border: 10px solid var(--fond);
      background-color: var(--fond);
      width: fit-content;
-     animation: go 1.5s;
 }
 .skills li::after{
      content: '';
@@ -456,11 +453,6 @@ svg{
      height: 5px;
      background-color: var(--shadow-light);
 }
-@keyframes go{
-     from{
-          margin-left: 0;
-     }
-     to{
-          margin-left: 50%;
-     }
-}
+
+/* --------------------- */
+
